# mcp_smartsearch

./: README.md  pyproject.toml
mcp_smartsearch/src/mcp_smartsearch/: server.py
src/mcp_smartsearch/: __init__.py
