[project]
name = "mcp-smartsearch"
version = "0.1.0"
description = "An MCP server for a smart search API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-smartsearch = "mcp_smartsearch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
